[project]
name = "no-pressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.1",
    "psycopg2-binary>=2.9.9",
    "resend>=2.19.0",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
